--- a/style.css
+++ b/style.css
@@ -5,44 +5,79 @@
 }
 
 body {
+  background: rgb(49, 48, 56);
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   overflow: hidden;
-  background: url('https://images.pexels.com/photos/82256/pexels-photo-82256.jpeg?auto=compress&cs=tinysrgb&h=650&w=940')
-    no-repeat center/cover;
 }
+
 .container {
-  display: flex;
-  width: 66vw;
-}
-.panel {
-  margin: 0.6rem;
-  border-radius: 1rem;
-  height: 90vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transition: all 0.9s ease-out;
-  cursor: pointer;
-  box-shadow: 0.3rem 0.4rem 0.6rem 0.2rem #777;
-}
-.panel:hover {
-  transform: scale(1.1);
-}
-
-.panel.active {
-  flex: 1;
-}
-
-.panel h3 {
-  opacity: 0;
-}
-.panel.active h3 {
-  font-size: 2.6rem;
-  color: brown;
-  font-weight: 900;
   text-align: center;
-  opacity: 1;
+}
+
+.progress-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  position: relative;
+  max-width: 100%;
+  width: 40vw;
+}
+.progress-container::before {
+  content: '';
+  position: absolute;
+  background: #888;
+  width: 100%;
+  transform: translateY(-50%);
+  margin-left: 0.1rem;
+  height: 3px;
+  top: 50%;
+  z-index: -1;
+}
+.progress {
+  position: absolute;
+  background: #3498db;
+  width: 0%;
+  height: 3px;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 0.1rem;
+  z-index: -1;
+  transition: all 0.4s ease-in-out;
+}
+
+.circle {
+  background: #666;
+  height: 40%;
+  width: 10%;
+  border-radius: 50%;
+  border: 4px solid #888;
+  padding: 0.2rem;
+  font-size: 1.2rem;
+  transition: all 0.5s ease-in-out;
+}
+.circle.active {
+  border-color: #3498db;
+}
+
+.btn {
+  background: lightgreen;
+  cursor: pointer;
+  padding: 0.5rem 2rem;
+  border: 0;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  font-size: 1rem;
+  outline: none;
+}
+.btn:active {
+  transform: scale(0.98);
+}
+.btn:disabled {
+  background: #888;
+  cursor: not-allowed;
 }
